--- a/app/views/rhbs/index.html.erb
+++ b/app/views/rhbs/index.html.erb
@@ -29,12 +29,18 @@
                     </div>
                     <button type="submit" id="submit" name="submit" class="btn btn-primary pull-right">Generate  BMR</button>
         </form>
+
     </div>
+     <div class="alert alert-success msg " style="text-align: center;margin-top: 84px;display:none"><srtong>
+     Your BMR:</srtong>&nbsp;&nbsp;&nbsp;
+  <span class="bmr_data"></span>  &nbsp;&nbsp;&nbsp;<strong>Calories/day</strong>
 </div>
-<div class="col-md-3"></div>
+</div>
+<div class="col-md-3">
+	
 </div>
 </div>
-<div class="alert-message"> </div>
+</div>
 
 
 <style type="text/css">
@@ -60,7 +66,7 @@ $(document).ready(function(){
         var gender = ""
         if($('input[name=gender]:checked').length<=0)
         {
-             alert("No radio checked")
+             alert("Please select gender.")
              event.preventDefault();
         }
         else
@@ -69,14 +75,16 @@ $(document).ready(function(){
             age = $('.age').val()
             height = $('.height').val()
             weight = $('.weight').val()
-
+            $(".msg").css("display","block")
             if(gender == "male")
             {
-                alert ((88.4 + 13.4 * weight) + (4.8 * height) - (5.68 * age))
+            	$(".bmr_data").text(((88.4 + 13.4 * weight) + (4.8 * height) - (5.68 * age)).toFixed(2))
+              
             }
             else{
-                alert((447.6 + 9.25 * weight) + (3.10 * height) - (4.33 * age))
+                $(".bmr_data").text(((447.6 + 9.25 * weight) + (3.10 * height) - (4.33 * age)).toFixed(2))
             }
+            event.preventDefault();
         }
     });
 });
